<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Rovereto</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_open_mail">Segnala</string>
    <string name="title_activity_osm_map">OsmMap</string>
    <string name="toMap">OSM</string>
    <string name="title_activity_stations">Stazioni</string>
    <string name="to_details">Dettagli</string>
    <string name="sort">Ordina per&#8230;</string>
    <string name="sort_distance">Distanza</string>
    <string name="sort_fav">Preferiti</string>
    <string name="sort_available_bikes">Bici disponibili</string>
    <string name="sort_available_slots">Slot disponibili</string>
    <string name="sort_name">Nome</string>
    <string name="title_activity_station_details">Dettagli stazione</string>
    <string name="reports">Segnalazioni</string>
    <string name="no_reports">Nessuna segnalazione</string>
    <string name="title_activity_signal">Guasti</string>
    <string name="signal">Segnalazioni</string>
    <string name="action_add_report">Crea segnalazione</string>
    <string name="report_other">Descrizione aggiuntiva</string>
    <string name="report_in">Segnala in</string>
    <string name="report">Segnala</string>
    <string name="drawer_open">Apri</string>
    <string name="drawer_close">Chiudi</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="pref_keep_update">Tienimi aggiornato</string>
    <string name="pref_keep_update_summary">Tienimi aggiornato sulle bici disponibili delle mie stazioni abituali</string>
    <string name="pref_keep_list">Scegli stazioni</string>
    <string name="add_photo">Aggiungi foto</string>
    <string name="refresh">Aggiorna</string>
    <string name="refresh_hint">Trascina verso il basso per aggiornare</string>
    <string name="add_reminder">Aggiungi promemoria</string>
    <string name="edit_reminder">Modifica promemoria</string>
    <string name="no_favourites">Nessuna stazione prefererita</string>
    <string name="no_stations">Nessuna stazione</string>
    <string name="station">stazione</string>
    <string name="error">Stazioni non disponibili</string>
    <string name="error_bikes">Bici non disponibili</string>
    <string name="error_reports">Segnalazioni non disponibili</string>
    <string name="choose1">Suggerimento</string>
    <string name="choose2">Reclamo</string>
    <string name="choose3">Segnalazione</string>
    <string name="map">Mappa</string>
    <string name="stations">Stazioni</string>
    <string name="favourites">Preferiti</string>
    <string name="tire">Ruota</string>
    <string name="chain">Catena</string>
    <string name="brakes">Freni</string>
    <string name="gears">Cambio</string>
    <string name="anarchich_bike">Bici anarchica</string>
    <string name="id">ID: </string>
    <string name="about">Informazioni</string>
    <string name="credits">Credits</string>
    <string name="project_by">Un progetto di:</string>
    <string name="bikes">Bici</string>
    <string name="collaboration_with">In collaborazione con:</string>
    <string name="for_info">Per informazioni:</string>
    <string name="email"><a href="mailto:bikerovereto@smartcampuslab.it">bikerovereto@smartcampuslab.it</a></string>
    <string name="Slots">Slot</string>
    <string name="problems">Problemi a:</string>
    <string name="send_report_succes">Segnalazione inviata correttamente</string>
    <string name="send_report_error">Errore mandando la segnalazione</string>
    <string name="bike_type_menu_emotion">e-motion</string>
    <string name="bike_type_menu_anarchic">anarchiche</string>
    <string name="settings">Impostazioni</string>
    <string name="dialog_title_no_internet">Vuoi connetterti ad Internet?</string>
    <string name="dialog_msg_no_internet">L\' applicazione richiede una connessione ad internet attiva. </string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="available">disponibili</string>
    <string name="notavailable">non disponibili</string>
    <string name="distancedetails">a %1$s dalla tua posizione.</string>
    <string name="distancenotavail">Distanza non disponibile.</string>
    <string name="directions">Indicazioni</string>
    <string name="positionnotavail">La tua posizione non e\' disponibile.</string>
    <string name="mail_info">Invia una email per avvisare l\' ente che si occupa del serivizio direttamente.</string>
    <string name="suggestion">Suggerimento</string>
    <string name="complaint">Reclamo</string>
    <string name="alert">Segnalazione</string>
    <string name="mail_text_hint">Inserisci qui il tuo messaggio</string>
    <string name="conset_position">Rileva la mia posizione</string>
    <string name="add_picture">Aggiungi una foto</string>
    <string name="send_with">Invia la mail con:</string>
    <string name="select_image_app">Seleziona la galleria:</string>
</resources>