<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.openstreetmap.StationsActivity" >

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/sort"        
		app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
			        android:id="@+id/sort_fav"
			        android:title="@string/sort_fav"  />
                <item
			        android:id="@+id/sort_distance"
			        android:title="@string/sort_distance"  />
			    <item
			        android:id="@+id/sort_available_bikes"
			        android:title="@string/sort_available_bikes" />
			    <item
			        android:id="@+id/sort_available_slots"
			        android:title="@string/sort_available_slots"    />
			    <item
			        android:id="@+id/sort_name"
			        android:title="@string/sort_name"  />
            </group>
            
        </menu>        
    </item>
    
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
